syntax = "proto3";

option csharp_namespace = "CookingMedia.Recipe.Api.Client";
import "model.proto";

package greet;

// The greeting service definition.
service IngredientGreeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}