syntax = "proto3";

option csharp_namespace = "CookingMedia.Recipe.Api";
import "Google/Api/annotations.proto";
import "model.proto";
package greet;

// The greeting service definition.
service RecipeGreeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get: "/v1/greeter/{name}"
    };
  };

  rpc SayHelloToIngredient (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get: "/v1/greeter/ingredient/{name}"
    };
  };
}
