syntax = "proto3";

option csharp_namespace = "CookingMedia.Recipe.Api.Model";
package greet;

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message RecipeModel {
	int32 id = 100;
	// TODO: replace all FKs with entities
	int32 recipe_category_id = 1;
	int32 recipe_style_id = 2;
	int32 cooking_method_id = 3;

	optional string image_link = 4;
	int32 cooking_time = 5;
	optional string description = 6;
	int32 serving_size = 7;
	repeated StepModel steps = 8;
	repeated AmountModel amounts = 9;

	message StepModel {
		int32 id = 100;
		int32 index = 1;
		string media_url = 2;
		string description = 3;
	}

	message AmountModel {
		int32 id = 100;
		string amount = 1;
		Ingredient intgredient = 2;
	}
}

message Ingredient {
  int32 id = 1;
  int32 ingredient_category_id = 2;
  string name = 3;
  string image = 4;
}

message IngredientCategory {
  int32 id = 1;
  string name = 2;
}